--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@ body {
     margin-bottom: 40px;
 }
 
+h2 {
+    margin-top: 8px;
+}
+
 /* Header Styles */
 
 #header {
@@ -42,7 +46,7 @@ body {
     max-width: fit-content;
     font-family: 'Trebuchet MS';
     font-size: 16px;
-    animation-name: WeatherFadeIn;
+    animation-name: LeftToRightFadeIn;
     animation-duration: 1s;
 }
 
@@ -107,7 +111,7 @@ body {
     width: fit-content;
     font-family: 'Trebuchet MS';
     font-size: 18px;
-    animation-name: NavFadeIn;
+    animation-name: RightToLeftFadeIn;
     animation-duration: 1s;
 }
 
@@ -169,19 +173,124 @@ body {
 /* First Section */
 
 #first-sec {
-    background-image: url(assets/pngs/h4_img10.png);
-    background-repeat: no-repeat;
-    background-position: 20%;
+    background-image: url(assets/pngs/h2_shape-1-opacity-41.png);
+    background-position:center;
+    background-size:contain;
+    background-attachment: fixed;
     text-align: center;
     font-size: larger;
 }
 
 #first-sec p {
     text-align: justify;
-    margin: 0% 30%;
     line-height: 30px;
     margin-bottom: 15px;
 }
+
+/* First Section General Elements Style */
+
+.reveal{
+    opacity: 0;
+    transition: opacity 1s;
+}
+  
+  .reveal.active{
+    opacity: 1;
+}
+
+.reveal{
+    opacity: 0;
+    transition: opacity 1s;
+}
+  
+  .reveal.active{
+    opacity: 1;
+}
+
+  #two-text-box { 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+  /* First Section Element Specific Styles */
+
+  #reveal1.active {
+    margin: 0% 30%;
+    animation: TopToBottom;
+    animation-duration: 1s;
+}
+
+  #reveal2.active {
+    margin-top: 40px;
+    padding-left: 100px;
+    padding-right: 50px;
+    animation: LeftToRight;
+    animation-duration: 1s;
+}
+
+  #reveal3.active {
+    margin-top: 40px;
+    padding-left: 50px;
+    padding-right: 100px;
+    animation: RightToLeft;
+    animation-duration: 1s;
+}
+
+/* Second Section General Styles */
+
+#second-sec {
+    margin-top: 20px;
+    background-image: url(assets/pngs/pexels-kevin-ku-577585.jpg);
+    background-attachment: fixed;
+    backdrop-filter: blur(200px);
+    height: fit-content;
+    padding: 50px 50px 0 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    color: aliceblue;
+    font-size: 30px;
+    text-shadow: #000000 50px;
+}
+
+#cards-sec {
+    display: flex;
+    justify-content:center;
+}
+
+#card {
+    background-color: aliceblue;
+    height: 500px;
+    width: 400px;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 5px;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    display: grid;
+    text-align: center;
+    margin: 0 20px -100px 20px;
+    padding-bottom: 30px;
+    color: #000000;
+}
+
+#card p {
+    line-height: 20px;
+    text-align: justify;
+    padding: 0px 30px;
+    font-size: 16px;
+    margin-top: 0;
+}
+
+#card img {
+    max-width: 400px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+#card h3 {
+    font-size: 30px;
+}
+
 
 /* Keyframes */
 
@@ -225,7 +334,7 @@ body {
     }
 }
 
-@keyframes NavFadeIn {
+@keyframes RightToLeftFadeIn {
     0% {
         opacity: 0.5;
         transform: translate3d(20px, 0, 0);
@@ -237,7 +346,7 @@ body {
     }
 }
 
-@keyframes WeatherFadeIn {
+@keyframes LeftToRightFadeIn {
     0% {
         opacity: 0.5;
         transform: translate3d(-20px, 0, 0);
@@ -246,5 +355,23 @@ body {
     100% {
         opacity: 1;
         transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes TopToBottom {
+    0% {
+        transform: translate(0, 10px);
+    }
+}
+
+@keyframes LeftToRight {
+    0% {
+        transform: translate(-10px, 0);
+    }
+}
+
+@keyframes RightToLeft {
+    0% {
+        transform: translate(10px, 0);
     }
 }
