--- a/index.css
+++ b/index.css
@@ -198,15 +198,6 @@ h2 {
     opacity: 1;
 }
 
-.reveal{
-    opacity: 0;
-    transition: opacity 1s;
-}
-  
-  .reveal.active{
-    opacity: 1;
-}
-
   #two-text-box { 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -258,6 +249,8 @@ h2 {
     justify-content:center;
 }
 
+/* Cards Styles */
+
 #card {
     background-color: aliceblue;
     height: 500px;
@@ -291,6 +284,69 @@ h2 {
     font-size: 30px;
 }
 
+#card:hover {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.872);
+    animation: Zoom 0.5s forwards;
+}
+
+#card:hover img {
+    animation: ImgZoom 1s forwards;
+}
+
+/* Third Section General Styles */
+
+#third-sec {
+    margin-top: 150px;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    
+}
+
+#third-sec h2 {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.skill {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    max-width: 350px;
+    border-radius: 100px;
+    align-items: center;
+    background-color: rgba(128, 128, 128, 0.107);
+    padding: 0px 15px;
+}
+
+.skill h3 {
+    font-size: 18px;
+}
+
+.barBg {
+    width: 180px;
+    height: 10px;
+    border-radius: 100px;
+    background-color: lightgray;
+    border: none;
+    box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
+    margin-left: 20px;
+  }
+
+.bar.active {
+    height: 100%;
+    background-color: rgb(0, 167, 0);
+    animation: BarProgress 0.5s;
+    border-radius: 100px;
+}
+
+#percent {
+    margin-left: 30%;
+    margin-right: -45px;
+}
+
+#python {
+    max-width: 50%;
+}
 
 /* Keyframes */
 
@@ -373,5 +429,43 @@ h2 {
 @keyframes RightToLeft {
     0% {
         transform: translate(10px, 0);
+    }
+}
+
+@keyframes Zoom {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1.01);
+    }
+}
+
+@keyframes ImgZoom {
+    0% {
+        transform: scale(1)
+    }
+
+    100% {
+        transform: scale(1.002);
+    }
+}
+
+@keyframes BarProgress {
+    0% {
+        width: 0%;
+    }
+
+    30% {
+        width: 20%;
+    }
+
+    60% {
+        width: 80%;
+    }
+
+    100% {
+        width: 100%;
     }
 }
