--- a/index.css
+++ b/index.css
@@ -2,10 +2,11 @@
     --primary: #001323;
     --secondary: #000700; 
     --text: aliceblue;
+    --font: 'Trebuchet MS'
 }
 
 body {
-    font-family: 'Trebuchet MS';
+    font-family: var(--font);
     margin: 0;
 }
 
@@ -44,7 +45,7 @@ h2 {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     font-weight: bold;
     max-width: fit-content;
-    font-family: 'Trebuchet MS';
+    font-family: var(--font);
     font-size: 16px;
     animation-name: LeftToRightFadeIn;
     animation-duration: 1s;
@@ -109,10 +110,9 @@ h2 {
     font-weight: bold;
     font-size: 15px;
     width: fit-content;
-    font-family: 'Trebuchet MS';
+    font-family: var(--font);
     font-size: 18px;
-    animation-name: RightToLeftFadeIn;
-    animation-duration: 1s;
+    animation: RightToLeftFadeIn 1s;
 }
 
 .nav-btn:hover {
@@ -300,19 +300,24 @@ h2 {
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
-    
 }
 
 #third-sec h2 {
     font-size: 40px;
     font-weight: bold;
+    margin-bottom: 0;
 }
 
 .skills {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    place-items: center;
     gap: 5%;
-    margin: 0 20%;
+    margin: 50px 20%;
+    background-image: url(assets/pngs/h2_shape-1-opacity-41.png);
+    background-position:center;
+    background-attachment: fixed;
+
 }
 
 .skill {
@@ -321,12 +326,14 @@ h2 {
     max-width: 350px;
     border-radius: 100px;
     align-items: center;
-    background-color: rgba(128, 128, 128, 0.107);
     padding: 0px 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.128);
 }
 
 .skill h3 {
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: lighter;
+    font-family: var(--font);
 }
 
 .barBg {
@@ -344,14 +351,6 @@ h2 {
     background-color: rgb(0, 167, 0);
     animation: BarProgress 0.5s;
     border-radius: 100px;
-}
-
-#python {
-    max-width: 50%;
-}
-
-#javascript {
-    max-width: 60%;
 }
 
 /* Keyframes */
