--- a/index.css
+++ b/index.css
@@ -297,6 +297,7 @@ h2 {
 
 #third-sec {
     margin-top: 150px;
+    margin-bottom: 100px;
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
@@ -319,6 +320,8 @@ h2 {
     background-attachment: fixed;
 
 }
+
+/* Each Skill's style */
 
 .skill {
     display: grid;
@@ -352,6 +355,32 @@ h2 {
     animation: BarProgress 0.5s;
     border-radius: 100px;
 }
+
+/* Footer Styles */
+.footer {
+    background-color: var(--primary);
+    height: 50px;
+    border-radius: 40% 40% 0px 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    color: white;
+    height: auto;
+    justify-items: center;
+}
+
+#footer-left {
+    padding: 110px 50px 0 0;
+}
+
+#footer-center {
+    padding: 110px 50px 0 0;
+}
+
+#footer-right {
+    padding: 110px 200px 0 0;
+}
+
+
 
 /* Keyframes */
 
