--- a/index.css
+++ b/index.css
@@ -887,23 +887,28 @@ h2 {
     .footer {
         background-color: var(--primary);
         border-radius: 0 0 0px 0px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-wrap: wrap;
         color: white;
         height: auto;
         justify-items: center;
         margin-top: 250px;
+        padding: 30px 10px 0 20px;
     }
 
     #footer-left {
         padding: 20px 50px 0 0;
+        justify-content: center;
+        align-items: center;
     }
 
     #footer-center {
-        padding: 20px 50px 0 0;
+        padding: 20px 0px 0 0;
+        justify-content: center;
+        align-items: center;
     }
 
     #footer-right {
-        padding: 0;
+        padding: 0px 0px 0 0;
     }
 }
