--- a/index.css
+++ b/index.css
@@ -5,6 +5,11 @@
     --font: 'Trebuchet MS'
 }
 
+a:link {
+    color: white;
+    text-decoration: none;
+}
+
 body {
     font-family: var(--font);
     margin: 0;
