removed links style

--- a/index.css
+++ b/index.css
@@ -5,10 +5,10 @@
     --font: 'Trebuchet MS'
 }
 
-a:link {
+/* a:link {
     color: white;
     text-decoration: none;
-}
+} */
 
 body {
     font-family: var(--font);
