--- a/index.css
+++ b/index.css
@@ -341,7 +341,7 @@ h2 {
     background-attachment: fixed;
     backdrop-filter: blur(200px);
     height: 530px;
-    padding: 50px 50px 0 50px;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
@@ -359,6 +359,7 @@ h2 {
     scrollbar-width: none;
     /* hide scrollbar for IE and Edge */
     -ms-overflow-style: none;
+    user-select: none;
 }
 
 #cards-sec::-webkit-scrollbar {
@@ -375,7 +376,7 @@ h2 {
     width: 400px;
     border-style: solid;
     border-color: #000000;
-    border-width: 5px;
+    border-width: 3px;
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     display: grid;
@@ -387,7 +388,7 @@ h2 {
 
 #card p {
     line-height: 20px;
-    text-align: left;
+    text-align: justify;
     padding: 0px 30px;
     font-size: 16px;
     margin-top: 0;
@@ -484,6 +485,13 @@ h2 {
     text-align: center;
     align-items: center;
     margin-top: 50px;
+    overflow-x: auto;
+}
+
+#fourth-sec h2 {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 #certificates-sec {
@@ -495,16 +503,17 @@ h2 {
     scrollbar-width: none;
     /* hide scrollbar for IE and Edge */
     -ms-overflow-style: none;
+    user-select: none;
 }
 
 #certificates-sec #card {
     height: 300px;
-    min-width: 300px;
+    min-width: 329px;
     min-height: 250px;
 }
 
 #certificates-sec #card img {
-    max-width: 329px !important;
+    max-width: 333px !important;
 }
 
 #certificates-sec::-webkit-scrollbar {
@@ -1074,7 +1083,7 @@ h2 {
     
     #card p {
         line-height: 12px;
-        text-align: justify;
+        text-align: start;
         padding: 0px 30px;
         font-size: 12px;
         margin-top: 0;
@@ -1212,7 +1221,7 @@ h2 {
         display: flex;
         flex-wrap: wrap;
         color: white;
-        height: 600px;
+        height: 400px;
         justify-items: center;
         margin-top: 0px;
         padding: 30px 10px 0 20px;
